# parseland-lib

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Procfile  README.md  app.py  css_limiter.py  package.json  parseland.py  requirements.txt  setup.py  utils.py
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
eval/: .gitignore  Gold Standard For Parseland - Sheet1.csv  Gold Standard For Parseland - Sheet1.json  README.md  gold-standard.csv  gold-standard.holdout.json  gold-standard.json  gold-standard.seed.json  pyproject.toml
eval/data/: random-50-extracted.csv  random-50-extracted.meta.json  random-50.csv
eval/parseland_eval/: __init__.py  __main__.py  build_gold.py  cli.py  expand.py  fetch.py  gold.py  paths.py  pricing.py  prompt_eval.py  report.py  runner.py  split.py  tui.py
eval/parseland_eval/prompts/: extraction_v1.md
eval/parseland_eval/score/: __init__.py  abstract.py  affiliations.py  aggregate.py  authors.py  normalize.py  pdf_url.py
eval/runs/: baseline-20260416T184013Z.json  baseline-holdout-20260417T184059Z.json  index.json  prompt-claude-sonnet-4-6-sonnet-v1-extraction_v1-20260417T184004Z.json
eval/scripts/: compare_passive_vs_agentic.py  extract_with_agent_browser.py  extract_with_agent_claude.py  gpt_review.py  pilot_report.py  sample_50_random_dois.py
eval/tests/: test_aggregate.py  test_authors_match.py  test_normalize.py
mismatches/: field-opportunity.json  retrieval-browser-summary.json  whole-goldie-phase1-smoke-200.json
parseland_lib/: dynamodb.py  parse.py  (+5 more)
(+1010 files in other folders)
