[project]
name = "parseland-eval"
version = "0.1.0"
description = "Offline evaluation harness for parseland-lib against a gold-standard DOI corpus."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4~=4.12.3",
  "lxml~=5.2.2",
  "rapidfuzz~=3.9",
  "requests~=2.32",
  "unidecode~=1.3.8",
  "ftfy~=6.2.0",
  "nameparser~=1.1.3",
  "anthropic~=0.42",
  "openai~=1.50",
  "python-dotenv~=1.0",
]

[project.optional-dependencies]
dev = ["pytest~=8.3", "pytest-cov~=5.0"]

[project.scripts]
parseland-eval = "parseland_eval.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["parseland_eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
